--- a/WebDynamicCars/WebDynamicCars.csproj
+++ b/WebDynamicCars/WebDynamicCars.csproj
@@ -1,15 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Console_UI</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\Infrastructure.csproj" />
+    <ProjectReference Include="..\Console UI\Console UI.csproj" />
     <ProjectReference Include="..\Entities\Domain.csproj" />
   </ItemGroup>
 
