--- a/WebDynamicCars/appsettings.json
+++ b/WebDynamicCars/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "DataFiles": {
+        "Orders": "orders.json",
+        "Clients": "clients.json"
     }
-  },
-  "AllowedHosts": "*"
 }
