Добавил ManagersContrller к нему подключил Register и Login UseCase

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 # Игнорировать файлы данных клиентов и заказов
 /WebDynamicCars/clients.*
 /WebDynamicCars/orders.*
+/WebDynamicCars/manager.*
