--- a/ClassLibrary1/Infrastructure (2).csproj
+++ b/ClassLibrary1/Infrastructure (2).csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entities\Applictaion.csproj" />
+    <ProjectReference Include="..\Entities\Domain.csproj" />
   </ItemGroup>
 
 </Project>
