--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entities\Applictaion.csproj" />
+    <ProjectReference Include="..\Application\Applictaion.csproj" />
   </ItemGroup>
 
 </Project>
