Исправил все ошибки

--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -1,6 +1,8 @@
 {
-    "DataFiles": {
-        "Orders": "orders.json",
-        "Clients": "clients.json"
+    "RepositorySettings": {
+        "OrdersPath": "Data/orders.json",
+        "ClientsPath": "Data/clients.json",
+        "ManagersPath": "Data/managers.json"
     }
+
 }
