--- a/.gitignore
+++ b/.gitignore
@@ -362,6 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 # Игнорировать файлы данных клиентов и заказов
-/WebDynamicCars/clients.*
-/WebDynamicCars/orders.*
-/WebDynamicCars/manager.*
+/WebUI/DataFiles
