--- a/ConsoleUI/ConsoleUI.csproj
+++ b/ConsoleUI/ConsoleUI.csproj
@@ -10,8 +10,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Applictaion.csproj" />
-    <ProjectReference Include="..\ClassLibrary1\Infrastructure.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.5" />
   </ItemGroup>
 
 </Project>
