Добавил метод в ManagerController - получение списка заказов

--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -1,8 +1,7 @@
 {
     "RepositorySettings": {
-        "OrdersPath": "Data/orders.json",
-        "ClientsPath": "Data/clients.json",
-        "ManagersPath": "Data/managers.json"
+        "OrdersFilePath": "DataFiles/orders.json",
+        "ClientsFilePath": "DataFiles/clients.json",
+        "ManagersFilePath": "DataFiles/managers.json"
     }
-
 }
