--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -2,6 +2,7 @@
     "RepositorySettings": {
         "OrdersFilePath": "DataFiles/orders.json",
         "ClientsFilePath": "DataFiles/clients.json",
-        "ManagersFilePath": "DataFiles/managers.json"
+        "ManagersFilePath": "DataFiles/managers.json",
+        "MakersFilePath": "DataFiles/makers.json"
     }
 }
