--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -3,6 +3,7 @@
         "OrdersFilePath": "DataFiles/orders.json",
         "ClientsFilePath": "DataFiles/clients.json",
         "ManagersFilePath": "DataFiles/managers.json",
-        "MakersFilePath": "DataFiles/makers.json"
+        "MakersFilePath": "DataFiles/makers.json",
+        "StoreFilePath": "DataFiles/store.json"
     }
 }
