Добавил в ManagersConraoller SendToDeliveryUsecase

--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="DataFiles\delivery.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="DataFiles\delivery.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
