--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -4,6 +4,7 @@
         "ClientsFilePath": "DataFiles/clients.json",
         "ManagersFilePath": "DataFiles/managers.json",
         "MakersFilePath": "DataFiles/makers.json",
-        "StoreFilePath": "DataFiles/store.json"
+        "StoreFilePath": "DataFiles/store.json",
+         "DeliveryFilePath": "DataFiles/delivery.json"
     }
 }
